--- a/src/_includes/partials/head.njk
+++ b/src/_includes/partials/head.njk
@@ -52,6 +52,7 @@
 
 <!-- Apple Touch Icon (reuse 192px icon.png) -->
 <link rel="apple-touch-icon" href="/static/images/favicon.png">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
 
 <!-- Facebook Open Graph meta -->
 <meta property="og:url" content="{{ site.url}}{{ page.url }}">
