--- a/src/index.njk
+++ b/src/index.njk
@@ -2,19 +2,9 @@
 layout: layouts/base.njk
 ---
 
-<main class="px-4 max-w-xl mx-auto text-lg text-gray-800 text-center">
-    <img src="/static/sample.png" alt="Illustration of a hand glider getting off the ground" class="w-full">
-    <h1 class="font-bold text-3xl">Web Starter <span class="font-light text-gray-500">v{{ site.version}}</span></h1>
-    <p class="text-gray-700">Get your website off the ground and enjoy the journey.</p>
-
-    <ul class="md:flex my-4">
-        <li class="md:flex-auto p-2">
-            <a href="https://github.com/chrisssycollins/web-starter/zipball/master/" class="block py-3 px-5 shadow-lg font-bold bg-teal-400 text-white rounded-lg hover:bg-teal-500">Download</a>
-        </li>
-        <li class="md:flex-auto p-2">
-            <a href="https://github.com/chrisssycollins/web-starter#features" class="block py-3 px-5 shadow-lg font-bold border rounded-lg hover:bg-gray-100">Get started</a>
-        </li>
-    </ul>
-
-    <p class="text-xs text-gray-500">Open source project by <a class="underline" href="https://www.chriscollins.me">Chris Collins</a>. Go and build something great, don't thank me.</p>
-</main>
+<div id="pageContent">
+    <h1>Designing Tomorrow</h1>
+    <p><b>The future is <span class="pulse">weird</span>.</b> This is because, on one hand, the future doesn’t exist yet; those that talk of the future as a thing we hurtle towards misunderstand it. However, on the other hand, the future is something that will exist one day and, not only that, it has its roots in the present. We can picture it, we can think about it, it is here in many ways and yet, it is inherently not here, always around the next corner. The future, by definition, is present and absent at the same time. This conflation between the two states of non/being is the essence of something <span class="pulse">weird</span>, something we can think about even as it defies our thought.</p>
+    <p><b>What if we used this <span class="pulse">weirdness</span> to our advantage?</b> What if, by forcing our imaginations to work with the <span class="pulse">weird</span>, to articulate the <span class="pulse">weird</span>, we could hack, break, and change the stories we tell ourselves about the future? What if, by working together, we could design future(s) which challenge, reassess, and open up the present? What if we had a set of tools that allowed us to do all of that and more?</p>
+    <h2>Designing Tomorrow(s) is a set of tools, methodologies and ideas to do just that: re-think, re-imagine, and re-design our future</h2>
+</div>
