--- a/src/index.njk
+++ b/src/index.njk
@@ -2,9 +2,17 @@
 layout: layouts/base.njk
 ---
 
-<div id="pageContent">
-    <h1>Designing Tomorrow</h1>
-    <p><b>The future is <span class="pulse">weird</span>.</b> This is because, on one hand, the future doesn’t exist yet; those that talk of the future as a thing we hurtle towards misunderstand it. However, on the other hand, the future is something that will exist one day and, not only that, it has its roots in the present. We can picture it, we can think about it, it is here in many ways and yet, it is inherently not here, always around the next corner. The future, by definition, is present and absent at the same time. This conflation between the two states of non/being is the essence of something <span class="pulse">weird</span>, something we can think about even as it defies our thought.</p>
-    <p><b>What if we used this <span class="pulse">weirdness</span> to our advantage?</b> What if, by forcing our imaginations to work with the <span class="pulse">weird</span>, to articulate the <span class="pulse">weird</span>, we could hack, break, and change the stories we tell ourselves about the future? What if, by working together, we could design future(s) which challenge, reassess, and open up the present? What if we had a set of tools that allowed us to do all of that and more?</p>
-    <h2>Designing Tomorrow(s) is a set of tools, methodologies and ideas to do just that: re-think, re-imagine, and re-design our future</h2>
-</div>
+<section class="contentSlice">
+    <h2>Welcome to Designing Tomorrow(s).</h2>
+</section>
+<section class="contentSlice">
+    <h2>What is Designing Tomorrow(s)?</h2>
+    <p>Designing Tomorrow(s) is a set of tools, methodologies and ideas to do just that: re-design, re-imagine, and re-think our future.</p>
+</section>
+<section class="contentSlice">
+    <h2>At Designing Tomorrow(s), we believe that the future is <span class="pulse">weird</span>.</h2>
+    <p>This is because the future doesn’t exist yet; those that talk of the future as a thing we hurtle towards misunderstand it. However, the future is also something that will exist one day and has its roots in the present. The future is a <span class="pulse">weird</span> loop.</p>
+</section>
+<section class="contentSlice">
+    <h2>Why design tomorrow?</h2>
+    <p>What if we used this <span class="pulse">weirdness</span> to our advantage? What if, by forcing our imaginations to work with the <span class="pulse">weird</span>, to articulate the <span class="pulse">weird</span>, we could hack, break, and change the stories we tell ourselves about the future? Make these stories more inclusive, more decolonial, more radical?</p>
