--- a/src/site/_includes/css/tailwind.css
+++ b/src/site/_includes/css/tailwind.css
@@ -2,98 +2,141 @@
 @tailwind  base;
 /* purgecss end ignore */
 
-/*
-  Content sections conventions
-*/
-section {
-  @apply pb-10;
-  @apply px-4;
-}
-p+p {
-  @apply mt-4;
+/* purgecss start ignore */
+
+* {
+    @apply m-0;
 }
 
-/*
-  Global headings conventions
-*/
-h1.heading {
-  @apply text-3xl;
-  @apply text-gray-900;
-  @apply mb-4;
-  @apply font-semibold;
+html {
+    @apply h-full;
 }
-@screen md {
-  h1.heading {
-    @apply text-3xl;
+
+body {
+    @apply bg-white h-full;
+}
+
+#mainWrapper {
+    @apply flex h-full;
+}
+
+#mainSidebar {
+    @apply flex flex-col bg-brass pt-24 font-main pl-6 pr-6;
+    flex: 1;
+}
+
+#mainSidebar div {
+    @apply text-carmine w-full flex justify-center text-4xl mb-10;
+}
+
+#mainContent {
+    @apply h-full;
+    max-width: 40rem;
+    margin: 0 auto;
+    flex: 6;
+}
+
+#pageContent {
+    @apply font-main pl-10 text-center h-auto;
+}
+
+h2 {
+    @apply text-4xl text-tiffany mt-20;
+    line-height: 2.4rem;
+    font-weight: 700;
+}
+
+p {
+    @apply font-main text-left text-xl text-brass mt-4 mb-4;
+    line-height: 28px;
+}
+
+#contentHeader {
+    @apply w-full;
+    height: 400px;
+    background: url(https://github.com/EdenKupe/notTheSky/blob/master/img/tree.jpg?raw=true);
+    background-position: center;
+}
+
+.contentSlice {
+    margin: 8rem auto;
+    position: relative;
+}
+
+/*pulse stuff*/
+/* Make the element pulse (grow large and small slowly) */
+/* Usage
+    .myElement {
+        animation: pulsate 1s ease-out;
+        animation-iteration-count: infinite;
+        opacity: 1; 
+    }
+*/
+@-webkit-keyframes pulsate {
+    0% {-webkit-transform: scale(0.1, 0.1); opacity: 0.0;}
+    50% {opacity: 1.0;}
+    100% {-webkit-transform: scale(1.2, 1.2); opacity: 0.0;}
+}
+
+/* Make the element's opacity pulse*/
+/* Usage
+    .myElement {
+        animation: opacityPulse 1s ease-out;
+        animation-iteration-count: infinite;
+        opacity: 0; 
+    }
+*/
+@-webkit-keyframes opacityPulse {
+    0% {opacity: 0.0;}
+    50% {opacity: 1.0;}
+    100% {opacity: 0.0;}
+}
+
+/* Make the element's background pulse. I call this alertPulse because it is red. You can call it something more generic. */
+/* Usage
+    .myElement {
+        animation: alertPulse 1s ease-out;
+        animation-iteration-count: infinite;
+        opacity: 1; 
+    }
+*/
+@-webkit-keyframes alertPulse {
+    0% {background-color: #9A2727; opacity: 1;}
+    50% {opacity: red; opacity: 0.75; }
+    100% {opacity: #9A2727; opacity: 1;}
+}
+
+
+/* Make the element rotate infinitely. */
+/* 
+Usage
+    .myElement {
+        animation: rotating 3s linear infinite;
+    }
+*/
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
-/*
-  Base styles for links
-*/
-a {
-  @apply border-b-2;
-  @apply border-teal-400;
+.pulse {
+    animation: opacityPulse 4s ease-out;
+    animation-iteration-count: infinite; 
+    opacity: 1;
 }
-a:hover,
-a:focus {
- @apply border-b-2;
- @apply border-teal-200;
-}
-a.naked-link:link,
-a.naked-link:visited {
-  @apply border-0;
-}
-
-.content ul,
-.content ol {
-  @apply my-6;
-}
-.content li {
-  @apply list-disc;
-  @apply ml-6;
-}
-.content ol li {
-  @apply list-decimal;
-  @apply pl-2;
-}
-
-code {
-  @apply bg-gray-200;
-  @apply text-sm;
-  @apply p-1;
-  @apply rounded;
-}
-
-/*
-  Navigation links
-*/
-.nav-tab {
-  @apply inline-block;
-  @apply text-white;
-  @apply font-semibold;
-  @apply px-4;
-  @apply py-2;
-  @apply border-b-0;
-  @apply rounded;
-}
-.nav-tab:hover {
-  @apply bg-white;
-  @apply text-teal-500;
-  @apply border-b-0;
-}
-
-
-.filter-bw-800 {
-  filter: grayscale(0.8);
-}
-
-.mb--2 {
-  margin-bottom: -0.5rem;
-}
-.mb--4 {
-  margin-bottom: -1rem;
-}
+/* purgecss end ignore */
 
 /* purgecss start ignore */
 @tailwind  components;
