--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -1,26 +1,20 @@
 ---
-title: ElevenTail
 layout: default
+title: Designing Tomorrow(s)
 ---
-<div class="pr-32 md:pr-56 text-right mb--4">
-  <a href="/about#possum" class="naked-link">
-    <img src="/images/possum-balloon.png" alt="The James Williamson Possum Balloon" class="inline-block filter-bw-800">
-  </a>
-</div>
-<div class="p-6 bg-teal-500 text-white ">
-  <h1 class="text-6xl pb-6 border-b-2 border-white leading-none font-serif">
-    ElevenTail Site Scaffold
-  </h1>
-  <p class="text-xl mt-2 leading-tight">
-    A running start for web projects with <a href="https://11ty.dev" target="_BLANK" rel="noopener">Eleventy</a> for site generation, <a href="https://tailwindcss.com" target="_BLANK" rel="noopener">Tailwind</a> for utility-first CSS, and a few other goodies.
-  </p>
-  <p class="text-xl mt-4 leading-tight">
-    <a href="https://app.netlify.com/start/deploy?repository=https://github.com/philhawksworth/eleventyone">Clone with a click</a>, or <a href="/about">learn more</a>
-  </p>
-</div>
 
-<div class="text-right my-6 px-8 text-2xl font-medium text-gray-700">
-  <p class="inline-block max-w-sm leading-tight">
-    By <a href="https://twitter.com/philhawksworth">Phil Hawksworth</a>, but based on the generous work of others
-  </p>
-</div>
+<section class="contentSlice">
+    <h2>Welcome to Designing Tomorrow(s).</h2>
+</section>
+<section class="contentSlice">
+    <h2>What is Designing Tomorrow(s)?</h2>
+    <p>Designing Tomorrow(s) is a set of tools, methodologies and ideas to do just that: re-design, re-imagine, and re-think our future.</p>
+</section>
+<section class="contentSlice">
+    <h2>At Designing Tomorrow(s), we believe that the future is <span class="pulse">weird</span>.</h2>
+    <p>This is because the future doesn’t exist yet; those that talk of the future as a thing we hurtle towards misunderstand it. However, the future is also something that will exist one day and has its roots in the present. The future is a <span class="pulse">weird</span> loop.</p>
+</section>
+<section class="contentSlice">
+    <h2>Why design tomorrow?</h2>
+    <p>What if we used this <span class="pulse">weirdness</span> to our advantage? What if, by forcing our imaginations to work with the <span class="pulse">weird</span>, to articulate the <span class="pulse">weird</span>, we could hack, break, and change the stories we tell ourselves about the future? Make these stories more inclusive, more decolonial, more radical?</p>
+</section>
