--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -18,3 +18,24 @@ title: Designing Tomorrow(s)
     <h2>Why design tomorrow?</h2>
     <p>What if we used this <span class="pulse">weirdness</span> to our advantage? What if, by forcing our imaginations to work with the <span class="pulse">weird</span>, to articulate the <span class="pulse">weird</span>, we could hack, break, and change the stories we tell ourselves about the future? Make these stories more inclusive, more decolonial, more radical?</p>
 </section>
+<section class="contentSlice sideBySide">
+<h2>Intros, engines, and foundations</h2>
+<h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
+  <div class="methodRow">
+    <div class="methodBox">
+      <h4>A Handbook for Desirable Futures</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+    <div class="methodBox"> 
+      <h4>Science Fiction as a Tool</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+  </div>
+  <div class="methodRow">
+    <div class="methodBox"> 
+      <h4>Science fiction - now!</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+    <div class="methodBox placeholder"></div>
+  </div>
+</section>
