--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -36,6 +36,9 @@ title: Designing Tomorrow(s)
       <h4>Science fiction - now!</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
-    <div class="methodBox placeholder"></div>
+    <div class="methodBox"> 
+      <h4>Spectulation in a World of Prediction</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
   </div>
 </section>
