--- a/src/site/_includes/layouts/404Base.njk
+++ b/src/site/_includes/layouts/404Base.njk
@@ -7,8 +7,8 @@
     <title>{{ title }}</title>
     {% include "social.njk" %}
   </head>
-  <body id="backgroundImage">
-    <div class="content leading-relaxed">
+  <body>
+    <div class="content w-1/2 leading-relaxed">
       {{ content | safe }}
     </div>
     {% include "footer.njk" %}
