--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -41,4 +41,50 @@ title: Designing Tomorrow(s)
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
   </div>
+  <section class="contentSlice sideBySide">
+<h2>Intros, engines, and foundations</h2>
+<h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
+  <div class="methodRow">
+    <div class="methodBox">
+      <h4>A Handbook for Desirable Futures</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+    <div class="methodBox"> 
+      <h4>Science Fiction as a Tool</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+  </div>
+  <div class="methodRow">
+    <div class="methodBox"> 
+      <h4>Science fiction - now!</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+    <div class="methodBox"> 
+      <h4>Spectulation in a World of Prediction</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+  </div>
+  <section class="contentSlice sideBySide">
+<h2>Intros, engines, and foundations</h2>
+<h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
+  <div class="methodRow">
+    <div class="methodBox">
+      <h4>A Handbook for Desirable Futures</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+    <div class="methodBox"> 
+      <h4>Science Fiction as a Tool</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+  </div>
+  <div class="methodRow">
+    <div class="methodBox"> 
+      <h4>Science fiction - now!</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+    <div class="methodBox"> 
+      <h4>Spectulation in a World of Prediction</h4>
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    </div>
+  </div>
 </section>
