--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
     <title>{{ title }}</title>
     {% include "social.njk" %}
   </head>
-  <body id="backgroundImage">
+  <body id="mainBody" class="backgroundImage">
     <div class="content leading-relaxed">
       {{ content | safe }}
     </div>
