colors and a spaceship

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -3,8 +3,9 @@ layout: default
 title: Designing Tomorrow(s)
 ---
 
-<section class="contentSlice">
-    <h2>Welcome to Designing Tomorrow(s).</h2>
+<section class="contentSlice"> 
+    <h2 id="mainTitle">Welcome to Designing Tomorrow(s)</h2>
+    <p>Here's a spaceship 🚀</p>
 </section>
 <section class="contentSlice">
     <h2>What is Designing Tomorrow(s)?</h2>
@@ -46,21 +47,21 @@ title: Designing Tomorrow(s)
 <h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
   <div class="methodRow">
     <div class="methodBox">
-      <h4>A Handbook for Desirable Futures</h4>
+      <h4 class="lower">A Handbook for Desirable Futures</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
     <div class="methodBox"> 
-      <h4>Science Fiction as a Tool</h4>
+      <h4 class="lower">Science Fiction as a Tool</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
   </div>
   <div class="methodRow">
     <div class="methodBox"> 
-      <h4>Science fiction - now!</h4>
+      <h4 class="lower">Science fiction - now!</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
     <div class="methodBox"> 
-      <h4>Spectulation in a World of Prediction</h4>
+      <h4 class="lower">Spectulation in a World of Prediction</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
   </div>
@@ -69,21 +70,21 @@ title: Designing Tomorrow(s)
 <h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
   <div class="methodRow">
     <div class="methodBox">
-      <h4>A Handbook for Desirable Futures</h4>
+      <h4 class="lowest">A Handbook for Desirable Futures</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
     <div class="methodBox"> 
-      <h4>Science Fiction as a Tool</h4>
+      <h4 class="lowest">Science Fiction as a Tool</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
   </div>
   <div class="methodRow">
     <div class="methodBox"> 
-      <h4>Science fiction - now!</h4>
+      <h4 class="lowest">Science fiction - now!</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
     <div class="methodBox"> 
-      <h4>Spectulation in a World of Prediction</h4>
+      <h4 class="lowest">Spectulation in a World of Prediction</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
     </div>
   </div>
