--- a/src/site/_includes/css/tailwind.css
+++ b/src/site/_includes/css/tailwind.css
@@ -74,10 +74,10 @@ h4 {
 }
 
 h4:after {
+  @apply bg-marker;
   width: 100%;
   display: block;
   content: '';
-  background: #fbf36d;
   margin-top: -1.1rem;
   margin-left: -10px;
   height: 0.8rem;
@@ -88,6 +88,14 @@ h4:after {
   -o-transition: all 0.3s ease-out;
   -ms-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+}
+
+h4.lower::after {
+  @apply bg-apricot;
+}
+
+h4.lowest::after {
+  @apply bg-fblue;
 }
 
 p {
