--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -23,69 +23,69 @@ title: Designing Tomorrow(s)
 <h2>Intros, engines, and foundations</h2>
 <h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
   <div class="methodRow">
-    <div class="methodBox">
+    <a href="/pages/handbook" class="methodBox">
       <h4>A Handbook for Desirable Futures</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-    <div class="methodBox"> 
+      <span>Exploring the importance of speculative methodologies</span>
+    </a>
+    <a href="#" class="methodBox"> 
       <h4>Science Fiction as a Tool</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
+      <span>Conceptualizing our radical future, near or far, inherently involves the imagination</span>
+    </a>
   </div>
   <div class="methodRow">
-    <div class="methodBox"> 
+    <a href="#" class="methodBox"> 
       <h4>Science fiction - now!</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-    <div class="methodBox"> 
+      <span>Imagine Tomorrow! If you don't, someone else will do so for you!</span>
+    </a>
+    <a href="#" class="methodBox"> 
       <h4>Spectulation in a World of Prediction</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
+      <span>The data driven realities we are creating are always a perpetuation of the past</span>
+    </a>
+  </div>
+  <section class="contentSlice sideBySide">
+<h2>Backpacks, devices, and trains </h2>
+<h3>Speculative design methodologies and case studies to build powerful, speculative workshops</h3>
+  <div class="methodRow">
+    <a href="#" class="methodBox">
+      <h4 class="lower">Backcasting</h4>
+      <span>The cool sister of forecasting, starting from the future and working back 😎</span>
+    </a>
+    <a href="#" class="methodBox"> 
+      <h4 class="lower">Four Futures</h4>
+      <span>Laying out the crossroads of our futures and focusing on the desirable ones</span>
+    </a>
+  </div>
+  <div class="methodRow">
+    <a href="#" class="methodBox"> 
+      <h4 class="lower">Speculative Toursim</h4>
+      <span>An invitation to imagine the geographically possible</span>
+    </a>
+    <a href="#" class="methodBox"> 
+      <h4 class="lower">The Backpack and The Device</h4>
+      <span>What devices can be found in the backpacks of our future selves?</span>
+    </a>
   </div>
   <section class="contentSlice sideBySide">
 <h2>Intros, engines, and foundations</h2>
 <h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
   <div class="methodRow">
-    <div class="methodBox">
-      <h4 class="lower">A Handbook for Desirable Futures</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-    <div class="methodBox"> 
-      <h4 class="lower">Science Fiction as a Tool</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-  </div>
-  <div class="methodRow">
-    <div class="methodBox"> 
-      <h4 class="lower">Science fiction - now!</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-    <div class="methodBox"> 
-      <h4 class="lower">Spectulation in a World of Prediction</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-  </div>
-  <section class="contentSlice sideBySide">
-<h2>Intros, engines, and foundations</h2>
-<h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
-  <div class="methodRow">
-    <div class="methodBox">
+    <a href="#" class="methodBox">
       <h4 class="lowest">A Handbook for Desirable Futures</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-    <div class="methodBox"> 
+    </a>
+    <a href="#" class="methodBox"> 
       <h4 class="lowest">Science Fiction as a Tool</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
+    </a>
   </div>
   <div class="methodRow">
-    <div class="methodBox"> 
+    <a href="#" class="methodBox"> 
       <h4 class="lowest">Science fiction - now!</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
-    <div class="methodBox"> 
+    </a>
+    <a href="#" class="methodBox"> 
       <h4 class="lowest">Spectulation in a World of Prediction</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-    </div>
+    </a>
   </div>
 </section>
