--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -23,11 +23,11 @@ title: Designing Tomorrow(s)
 <h2>Intros, engines, and foundations</h2>
 <h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
   <div class="methodRow">
-    <a href="/pages/handbook" class="methodBox">
+    <a href="/pages/intros/handbook" class="methodBox">
       <h4>A Handbook for Desirable Futures</h4>
       <span>Exploring the importance of speculative methodologies</span>
     </a>
-    <a href="#" class="methodBox"> 
+    <a href="/pages/intros/tool" class="methodBox"> 
       <h4>Science Fiction as a Tool</h4>
       <span>Conceptualizing our radical future, near or far, inherently involves the imagination</span>
     </a>
