--- a/src/site/_includes/navigation-links.njk
+++ b/src/site/_includes/navigation-links.njk
@@ -1,10 +1,1 @@
-
-<ul class="flex items-row">
-  {% for link in linkList %}
-    <li class="pr-1">
-      <a href="{{ link.url }}" class="nav-tab">
-        {{ link.text }}
-      </a>
-    </li>
-  {% endfor %}
-</ul>
+<div id="table-of-contents"></div>
