--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -33,11 +33,11 @@ title: Designing Tomorrow(s)
     </a>
   </div>
   <div class="methodRow">
-    <a href="#" class="methodBox"> 
-      <h4>Science fiction - now!</h4>
+    <a href="pages/intros/canceltheapocalypse" class="methodBox"> 
+      <h4>Cancel the Apocalypse!</h4>
       <span>Imagine Tomorrow! If you don't, someone else will do so for you!</span>
     </a>
-    <a href="#" class="methodBox"> 
+    <a href="pages/intros/prediction" class="methodBox"> 
       <h4>Spectulation in a World of Prediction</h4>
       <span>The data driven realities we are creating are always a perpetuation of the past</span>
     </a>
@@ -46,7 +46,7 @@ title: Designing Tomorrow(s)
 <h2>Backpacks, devices, and trains </h2>
 <h3>Speculative design methodologies and case studies to build powerful, speculative workshops</h3>
   <div class="methodRow">
-    <a href="#" class="methodBox">
+    <a href="pages/devices/backcasting" class="methodBox">
       <h4 class="lower">Backcasting</h4>
       <span>The cool sister of forecasting, starting from the future and working back 😎</span>
     </a>
@@ -60,7 +60,7 @@ title: Designing Tomorrow(s)
       <h4 class="lower">Speculative Toursim</h4>
       <span>An invitation to imagine the geographically possible</span>
     </a>
-    <a href="#" class="methodBox"> 
+    <a href="pages/devices/backpackdevice" class="methodBox"> 
       <h4 class="lower">The Backpack and The Device</h4>
       <span>What devices can be found in the backpacks of our future selves?</span>
     </a>
