--- a/src/site/_includes/layouts/devicePage.njk
+++ b/src/site/_includes/layouts/devicePage.njk
@@ -16,23 +16,23 @@
       <section class="contentSlice sideBySide">
 <h2>Continue exploring backpacks, devices, and trains</h2>
   <div class="methodRow">
-    <a href="/pages/intros/handbook" class="methodBox">
-      <h4>A Handbook for Desirable Futures</h4>
-      <span>Exploring the importance of speculative methodologies</span>
+    <a href="pages/devices/backcasting" class="methodBox">
+      <h4 class="lower">Backcasting</h4>
+      <span>The cool sister of forecasting, starting from the future and working back 😎</span>
     </a>
-    <a href="/pages/intros/tool" class="methodBox"> 
-      <h4>Science Fiction as a Tool</h4>
-      <span>Conceptualizing our radical future, near or far, inherently involves the imagination</span>
+    <a href="#" class="methodBox"> 
+      <h4 class="lower">Four Futures</h4>
+      <span>Laying out the crossroads of our futures and focusing on the desirable ones</span>
     </a>
   </div>
   <div class="methodRow">
     <a href="#" class="methodBox"> 
-      <h4>Science fiction - now!</h4>
-      <span>Imagine Tomorrow! If you don't, someone else will do so for you!</span>
+      <h4 class="lower">Speculative Toursim</h4>
+      <span>An invitation to imagine the geographically possible</span>
     </a>
-    <a href="#" class="methodBox"> 
-      <h4>Spectulation in a World of Prediction</h4>
-      <span>The data driven realities we are creating are always a perpetuation of the past</span>
+    <a href="pages/devices/backpackdevice" class="methodBox"> 
+      <h4 class="lower">The Backpack and The Device</h4>
+      <span>What devices can be found in the backpacks of our future selves?</span>
     </a>
   </div>
   </section>
