--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -57,7 +57,7 @@ title: Designing Tomorrow(s)
   </div>
   <div class="methodRow">
     <a href="#" class="methodBox"> 
-      <h4 class="lower">Speculative Toursim</h4>
+      <h4 class="lower">Speculative Tourism</h4>
       <span>An invitation to imagine the geographically possible</span>
     </a>
     <a href="pages/devices/backpackdevice" class="methodBox"> 
