--- a/src/site/_includes/css/tailwind.css
+++ b/src/site/_includes/css/tailwind.css
@@ -125,7 +125,7 @@ h4.lowest::after {
 }
 
 p {
-    @apply font-main text-left text-xl text-main mt-4 mb-4 font-bold;
+    @apply font-main text-left text-xl text-main mt-4 mb-4;
     line-height: 28px;
     max-width: 40rem;
 }
@@ -134,6 +134,10 @@ p {
     margin: 8rem auto;
     position: relative;
     max-width: 40rem;
+}
+
+.contentSlice p {
+  @apply font-bold;
 }
 
 .methodRow {
