--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -8,6 +8,7 @@
     {% include "social.njk" %}
   </head>
   <body id="mainBody" class="backgroundImage">
+    <p id="homeLink"><a href="/"> Go Home</a><span>🚀</span></p>
     <div class="content leading-relaxed">
       {{ content | safe }}
     </div>
