--- a/src/site/_includes/layouts/introPage.njk
+++ b/src/site/_includes/layouts/introPage.njk
@@ -8,6 +8,7 @@
     {% include "social.njk" %}
   </head>
   <body id="mainBody">
+    <p id="homeLink"><a href="/"> Go Home</a><span>🚀</span></p>
     {% include "navigation-links.njk" %}
     <div class="pageContent leading-relaxed">
     <div class="mainContent">
