--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -50,7 +50,7 @@ title: Designing Tomorrow(s)
       <h4 class="lower">Backcasting</h4>
       <span>The cool sister of forecasting, starting from the future and working back 😎</span>
     </a>
-    <a href="#" class="methodBox"> 
+    <a href="pages/devices/fourfutures" class="methodBox"> 
       <h4 class="lower">Four Futures</h4>
       <span>Laying out the crossroads of our futures and focusing on the desirable ones</span>
     </a>
