--- a/src/site/_includes/css/tailwind.css
+++ b/src/site/_includes/css/tailwind.css
@@ -144,6 +144,7 @@ ol, ul{
   @apply font-main text-left text-xl text-main mt-4 mb-4;
   line-height: 28px;
   max-width: 40rem;
+  list-style: auto;
 }
 
 .contentSlice {
